Correcion Body Respuesta TwoPair